fix: "home" page - overflow hidden

--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -1,5 +1,4 @@
 .home {
-  overflow:       hidden;
   padding-bottom: 20px;
   .aboutMe {
     padding: 0 0 10px;
